The templete code was updated according to latest update. The 'new issue' page was developed and also a simple styling was applied. A button 'new issue' can be found on the home page and when clicked it navigates the user to /issue/new route. After successfully submiting new issue, the user is redirected to the home page where the new issue is already available. This almost covers everything from stage 1 part 2.

--- a/public/style.css
+++ b/public/style.css
@@ -10,13 +10,6 @@ body {
   height: 100vh;
 }
 
-.login a, a:link, a:visited, a:focus, a:hover, a:active{
-  color: white;
-  text-decoration:none; 
-  font-size: 1.25em;
-  display: flex;
-}
-
 figure {
     height: 10em;
     width: 10em;
@@ -37,6 +30,27 @@ figure {
   align-items: center;
   flex-wrap: wrap;
   max-width: 95%;
+}
+
+.button {
+  padding: 16px 42px;
+  box-shadow: 0px 0px 12px -2px rgba(0,0,0,0.5);
+  line-height: 1.25;
+  background: #FC6E51;
+  text-transform: uppercase;
+  position: relative;
+  transition: background-color .6s ease;
+  max-width: 6em;
+  max-height: 15px;
+  left: 55%;
+}
+
+.login a, a:link, a:visited, a:focus, a:hover, a:active{
+  color: white;
+  text-decoration:none; 
+  font-size: 1.25em;
+  display: flex;
+  text-align: center;
 }
 
 header {
@@ -139,7 +153,7 @@ img {
 
 @media screen and (min-width: 60em) {
   .cards {
-    margin-top: inherit;
+    margin-top: 1em;
     display: flex;
     flex-direction: column;
     align-items: center;
